--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,21 +8,26 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "bootstrap-vue": "^2.21.2",
-    "core-js": "^3.6.5",
-    "vue": "^2.6.11",
-    "vue-router": "^3.5.1",
-    "vuex": "^3.6.2"
+    "axios": "~0.21.1",
+    "bootstrap-vue": "~2.21.2",
+    "core-js": "~3.9.1",
+    "vue": "~2.6.12",
+    "vue-router": "~3.5.1",
+    "vuetify": "~2.4.6",
+    "vuex": "~3.6.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "@vue/cli-plugin-babel": "~4.5.11",
+    "@vue/cli-plugin-eslint": "~4.5.11",
+    "@vue/cli-service": "~4.5.11",
+    "babel-eslint": "~10.1.0",
+    "eslint": "~6.8.0",
+    "eslint-plugin-vue": "~6.2.2",
+    "sass": "~1.32.8",
+    "sass-loader": "~10.1.1",
+    "vue-cli-plugin-vuetify": "~2.2.2",
+    "vue-template-compiler": "~2.6.12",
+    "vuetify-loader": "~1.7.2"
   },
   "eslintConfig": {
     "root": true,
