--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  deploy:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -26,6 +26,8 @@ jobs:
       uses: actions/checkout@v2.3.4
     - name: Ruby
       uses: ruby/setup-ruby@v1
+      with:
+        ruby-version: 2.6
     - name: ssh-agent
       uses: webfactory/ssh-agent@v0.5.1
       with:
