--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,7 @@ jobs:
       uses: ruby/setup-ruby@v1
       with:
         ruby-version: 2.6
+        bundler-cache: true
     - name: ssh-agent
       uses: webfactory/ssh-agent@v0.5.1
       with:
